--- a/template/lazyplaycricks.html
+++ b/template/lazyplaycricks.html
@@ -114,7 +114,7 @@
 
 <body style="background: black; ">
   
-  <a href="https://telegram.me/cricketclipsprovider" class="tg-banner" target="_blank" rel="noopener noreferrer">
+  <a href="https://telegram.me/LazyDeveloperr" class="tg-banner" target="_blank" rel="noopener noreferrer">
     <img src="https://i.ibb.co/cy1BxW0/lazydeveloper-telegram-logo.png" alt="lazy-developer-telegram-logo">
     <span>Join @LazyDeveloperr ❤</span>
   </a>
