--- a/template/req.html
+++ b/template/req.html
@@ -131,9 +131,9 @@
 
                 <!-- web title -->
                 <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/cricketclipsprovider">
+                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/LazyDeveloperr">
                         <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            LUCKY 
+                            LAZY LAB
                         </span>
                     </a>
                   </div>
@@ -240,7 +240,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/hey_lucky19">🧩Lucky🍟</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/lazyDeveloperr">🧩LazyDeveloperr🍟</a>
                 <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
                 All right reserved
             </div>  
